# ferriby

./: .woodpecker.yaml  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-plz.yml
ferriby/: CHANGELOG.md  Cargo.toml
ferriby-sources/: Cargo.toml
ferriby-sources/src/: git.rs  github.rs
ferriby/src/: app.rs  codeberg.rs  event.rs  forgejo.rs  git.rs  githoster.rs  github.rs  gitlab.rs  main.rs  ui.rs
vhs/: ferriby.tape
