[package]
name = "ferriby"
version = "0.1.0"
description = "keep ferris alive by contributing to a git repo"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
git2 = "0.20.2"
http = "1.3.1"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = "0.12.20"
tokio = { version = "1.40.0", features = ["full"] }
