[package]
name = "ferriby"
version = "0.4.0"
description = "keep ferris alive by contributing to a git repo"
readme = "../README.md"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.3"
config = { version = "0.15.18", features = ["json"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
git2 = "0.20.2"
http = "1.3.1"
ratatui = "0.29.0"
regex = "1.12.2"
reqwest = "0.12.24"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
